[package]
name = "bdwgc-alloc"
version = "0.6.12"
edition = "2024"
description = "impl GlobalAlloc for bdwgc"
repository = "https://github.com/raviqqe/bdwgc-alloc"
license = "MIT"

[dependencies]
libc = "0.2.178"

[build-dependencies]
autotools = { version = "0.2.7", optional = true }
cmake = { version = "0.1.55", optional = true }

[features]
default = ["autotools"]

[lints.clippy]
alloc_instead_of_core = "deny"
dbg_macro = "deny"
missing_const_for_fn = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
